Change to work with apks in other directories, fix hack waiting for apktool decoding